config/samples/envoy_v1alpha1_virtualservice.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  labels:
    app.kubernetes.io/name: virtualservice
    app.kubernetes.io/instance: virtualservice-sample
    app.kubernetes.io/part-of: envoy-xds-controller
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/created-by: envoy-xds-controller
  name: virtualservice-sample
  namespace: envoy-xds-controller
spec:
  virtualHost:
    name: vh-test
    domains:
    - "example.io"
    routes:
    - match: 
        prefix: "/"
      route: 
        cluster: cluster-sample
  tlsConfig:
    secretRef:
      name: cert1
      namespace: default
  accessLog:
    name: envoy.access_loggers
    typed_config:
      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
      path: /tmp/access_log
      log_format: 
        json_format: 
          timestamp: "%START_TIME%"
          verison: "%PROTOCOL%"
          request_time: "%DURATION%"
          status: "%RESPONSE_CODE%"
          response_flags: "%RESPONSE_FLAGS%"
          upstream: "%UPSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
          upstream_cluster: "%UPSTREAM_CLUSTER%"
          real-host: "%REQ(ORIGINAL-HOST)%"
          host: "%REQ(:AUTHORITY)%"
          response_code_details: "%RESPONSE_CODE_DETAILS%"
          real-ip: "%REQ(REAL-IP)%"
          request: "%REQ(:PATH)%"
          serverip: "%DOWNSTREAM_LOCAL_ADDRESS_WITHOUT_PORT%"
          server_port: "%DOWNSTREAM_LOCAL_PORT%"
          server_protocol: "%PROTOCOL%"
          sni: "%REQUESTED_SERVER_NAME%"
          ssl_cipher: "%DOWNSTREAM_TLS_CIPHER%"
          ssl_protocol: "%DOWNSTREAM_TLS_VERSION%"
          hostname: "%HOSTNAME%"
          method: "%REQ(:METHOD)%"
          user_agent: "%REQ(USER-AGENT)%"
          request_id: "%REQ(X-REQUEST-ID)%"
          scheme: "%REQ(:SCHEME)%"
          http_referer: "%REQ(REFERER)%"
          x_forwarded_for: "%REQ(X-FORWARDED-FOR)%"
          x_requested_with: "%REQ(X-REQUESTED-WITH)%"
          envoy_response_flags: "%RESPONSE_FLAGS%"
          location_id: "%REQ(LOCATION-ID)%"
          upstream_response_time: "%RESPONSE_DURATION%"
          upstream_failure: "%UPSTREAM_TRANSPORT_FAILURE_REASON%"
          balancer: "envoy"
  listener:
    name: https
    namespace: envoy-xds-controller
---
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  labels:
    app.kubernetes.io/name: virtualservice
    app.kubernetes.io/instance: virtualservice-sample
    app.kubernetes.io/part-of: envoy-xds-controller
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/created-by: envoy-xds-controller
  name: virtualservice-sample1
  namespace: envoy-xds-controller
spec:
  virtualHost:
    name: vh-test1
    domains:
    - "example1.io"
    routes:
    - match: 
        prefix: "/"
      route: 
        cluster: cluster-sample
  tlsConfig:
    secretRef:
      name: cert1
      namespace: default
  listener:
    name: https
    namespace: envoy-xds-controller
---
