config/samples/envoy_v1alpha1_virtualservice_tracing_inline.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: vs-tracing-inline
  annotations:
    envoy.kaasops.io/node-id: "node1"
spec:
  # Minimal example; adjust for your environment
  listener:
    name: listener-sample
  virtualHost:
    name: inline-tracing-vh
    domains:
      - "*"
    routes:
      - match:
          prefix: "/"
        route:
          cluster: example
  tracing:
    provider:
      name: envoy.tracers.zipkin
      typed_config:
        "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
        collector_cluster: zipkin
        collector_endpoint: /api/v2/spans
